# cppgfx

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
demo/: .clang-tidy  CMakeLists.txt  Camera.cpp  Camera.hpp  Content.cpp  Content.hpp  Demo.cpp  Demo.hpp  IslandDemo.cpp  IslandDemo.hpp  Main.cpp  Mesh.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ThirdParty.cmake
demo/Resources/: Bunny.glb  Island.glb  River.glb
include/: cppgfx.hpp
